# Local-First-RAG-Desktop-App

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MANUAL_QA.md  PLAN.md  PROGRESS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/app/: 0001_init.sql
src-tauri/migrations/workspace/: 0001_init.sql  0002_chunk_vector.sql
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  model.rs  state.rs
src-tauri/src/answer/: mod.rs
src-tauri/src/answer/llm/: mod.rs  ollama.rs
src-tauri/src/commands/: chat.rs  ingest.rs  mod.rs  workspace.rs
src-tauri/src/db/: mod.rs  repo.rs
src-tauri/src/embed/: mod.rs  ollama.rs
src-tauri/src/index/: bm25.rs  mod.rs  sqlite_store.rs  text.rs
src-tauri/src/ingest/: chunker.rs  mod.rs  pipeline.rs
src-tauri/src/ingest/sources/: folder.rs  ignore_rules.rs  mod.rs  repo.rs  url.rs
src-tauri/src/retrieve/: dedup.rs  fusion.rs  mod.rs  packing.rs
src/components/chat/: Composer.tsx  (+3 more)
src/hooks/: useWorkspaceBootstrap.ts
src/ipc/: client.test.ts  client.ts  events.ts
src/lib/: cn.ts  env.ts  highlight.test.ts  highlight.ts  sourceKind.test.ts  sourceKind.ts  tokens.ts
src/stores/: chat.ts  sources.test.ts  sources.ts  ui.ts  viewer.test.ts  viewer.ts  workspace.ts
src/styles/: globals.css
(+13 files in other folders)
